name:                ogma
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ogma-project/ogma#readme
license:             AGPL-3
license-file:        LICENSE
author:              Thomas Letan
maintainer:          contact@thomasletan.fr
copyright:           2017 Thomas Letan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag purs
  description:       "A tool to generate purescript scripts from the API specifications"
  default:           False

flag server
  description:       "The Ogma server"
  default:           False

library
  hs-source-dirs:      src
  exposed-modules:     Web.Ogma.Data
                     , Web.Ogma.Api
                     , Web.Ogma.Resource
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.11 && < 0.12
                     , megaparsec >= 6.1 && < 6.2
                     , aeson >= 1.1 && < 1.2
                     , text >= 1.2 && < 1.3
                     , http-api-data >= 0.3 && < 0.4
                     , mtl >= 2.2.1 && < 2.3
  default-language:    Haskell2010

executable ogmad
  hs-source-dirs:      app/ogmad
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  if flag(server)
    build-depends:     base
                     , ogma
                     , ogmarkup >= 3.1 && < 4.0
    buildable:         True
  else
    buildable:         False

executable og2purs
  hs-source-dirs:      app/og2purs
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  if flag(purs)
    build-depends:     base
                     , ogma
    buildable:         True
  else
    buildable:         False

test-suite ogma-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       DataSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , ogma
                     , QuickCheck
                     , hspec
                     , aeson
                     , text

source-repository head
  type:     git
  location: https://github.com/ogma-project/ogma