name:                ogma-api
version:             0.0.0.0
synopsis:            Specifications of the API exposed by an Ogma server
-- description:
homepage:            https://github.com/ogma-project/ogma-api#readme
license:             AGPL-3
license-file:        LICENSE
author:              Thomas Letan
maintainer:          contact@thomasletan.fr
copyright:           2017 Thomas Letan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Ogma.Api
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.11 && < 0.12
  default-language:    Haskell2010

executable og2purs
  hs-source-dirs:      app/og2purs
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ogma-api
  default-language:    Haskell2010

test-suite ogma-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ogma-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ogma-project/ogma-api
